syntax = "proto3";

import "user.proto";
import "image.proto";
import "comment.proto";

option csharp_namespace = "GRPCService";

package post;

service Post{
  rpc AddPost(TransferPostWithSubcategoryId) returns (PostObj);
  rpc SearchPosts(StringAndInteger) returns (ListOfPostObj);
  rpc GetAllPosts(RequestModel) returns (ListOfPostObj);
  rpc GetPostDetails(IdWithInteger) returns (PostObj);
   rpc GetPostsBySubcategoryId(SubIdWithCurrent) returns (ListOfPostObj);

}

message RequestModel {
  int32 current =1;
}

message PostObj{
  int32 id =1;
  string title =2;
  string description =3;
  int32 price =4;
  string address =5;
  string condition =6;
  string phoneNumber =7;
  string email =8;
  user.UserObj writer =9;
  repeated image.ImageObj  images =10;
  DateCreated dateCreated =11;
  repeated comment.CommentObj comments =12 ;

}

message ListOfPostObj{
  repeated PostObj list =1;
}

message IdWithInteger{
  int32 id=1;
}
message SubIdWithCurrent{
  int32 id =1;
  int32 current =2;
}

message TransferPostWithSubcategoryId{
  IdWithInteger idWithInteger =1;
  PostObj  postObj =2;
}

message StringAndInteger{
  string string =1;
  int32 current =2;
}

message DateCreated{
  int32 day =1;
  int32 month =2;
  int32 year =3;
}
